--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -120,3 +120,11 @@ button {
     width: 100%;
     margin-top: 10px;
 }
+
+#modalLogin {
+  padding-top: 25px;
+  margin-top: 10px;
+  height: 70%;
+  padding-bottom: 10px;
+  
+}
