--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -4,7 +4,7 @@
       <h5 class="white-text"><b>MEAN</b> Team</h5>
         <ul>
             <li><a class="white-text">We are a team of college smart students. Somos polit&eacute;nicos pilas.</a></li>
-        <li><a class="white-text">Thanks Gracias</a>
+        <li><a class="white-text">Gracias</a>
         <li><a class="white-text"><b>Edgar</b><i>Jamil</i><u>Guido</u>Lenin</a>
         </ul> 
     </div>
@@ -13,13 +13,13 @@
       <ul>
         <li><a class="white-text" href="https://www.lucidchart.com/documents/embeddedchart/f726bb32-0c1a-455d-aaf6-a79f73ac10d8">Modelo </a></li>
         <li><a class="white-text" href="https://espolec-my.sharepoint.com/personal/lhtenece_espol_edu_ec/_layouts/15/guestaccess.aspx?guestaccesstoken=VW1P1j6NJtsRnQeUppZvqbwr5s%2b6%2fLcL8oiju%2fuO1rA%3d&docid=0cc7b6ce2ad114f82b8df09531c33a44d&rev=1&expiration=2017-01-06T06%3a43%3a04.000Z">Documentaci&oacute;n del Proyecto</a></li>
-        <li><a class="white-text" href="https://github.com/wjvelez/saludPrimero">Repositorio GIT</a></li>
+        <li><a class="white-text" href="https://github.com/wjvelez/Salud-Primero-V2.0">Repositorio GIT</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="https://www.facebook.com/naomi.castillo.9480?fref=ts">MEAN Team</a>
+    Made by <a class="brown-text text-lighten-3" href="http://krispo.github.io/angular-nvd3/#/">MEAN Team</a>
   </div>
 </div>
