cmabios menores, corrigiendo estilos

--- a/public/views/operario/muestras-mensuales.html
+++ b/public/views/operario/muestras-mensuales.html
@@ -1,5 +1,10 @@
 <h4 class="text-center">Gr&aacute;ficos Estad&iacute;sticos</h4>
 <hr>
 <div class="center">
+	<div class="input-group input-daterange">
+    	<input type="text" class="form-control" value="2012-04-05">
+    	<span class="input-group-addon">to</span>
+    	<input type="text" class="form-control" value="2012-04-19">
+	</div>
 	<nvd3 options="options" data="data"></nvd3>
 </div>
