--- a/public/styles/estiloPac.css
+++ b/public/styles/estiloPac.css
@@ -1,7 +1,7 @@
 /* para la seccion de centros medicos */
 .contenedor{
     height: 270px;
-    width: 270px;
+    width: 300px;
     margin: auto;
     -webkit-perspective: 700;
     margin-bottom: 20px;
@@ -44,7 +44,6 @@
     position: relative;
 }
 
-
 .datos-pac{
     width: 70%;
     padding-left: 30%;
@@ -56,8 +55,6 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
-
 
 .panel-heading.tarjeta-titulo{
     color: dodgerblue;
@@ -79,18 +76,9 @@
     margin-top: 5px;
 }
 
-
-
 .fila{
     margin-bottom: 10px;
     margin-bottom: 10px;
-}
-
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
-    width: 80%;
-    /*height: 100%;*/
-    margin: auto;
 }
 
 .modal-centrado{
@@ -108,6 +96,13 @@
     height:100%;
     padding-left:20px;
     padding-right:20px;
-    padding-top:10px;
+    padding-top:30px;
     margin-top:-10px;
+}
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 80%;
+    height: 80%;
+    margin: auto;
 }
