--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -1,14 +1,3 @@
-<!--<div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2">Salud Primero</h1>
-      <br><br>
-    </div>
-  </div>
-  <div class="parallax"><img src="imagenes/main3.jpg"></div>
-</div>
--->
 
 <div class="container">
     <h4 class="text-center">Centros M&eacute;dicos</h4>
@@ -26,13 +15,7 @@
                   <img src="{{centro.portada}}" alt="imagen"> 
                   
                   
-                    <!--<div style="height:270px; width:270px; " class="card">
-                        <div style="height:270px;" class="card-image">-->
-                      
                   
-                            
-                        <!--</div> 
-                    </div>-->
                 </div>  
                 <div class="lado atras panel panel-default">
                     <div class="panel-body horarios text-center">
@@ -44,32 +27,44 @@
                 </div>
                 
             </div>
-            <div class="modal" id="modalInfo">
-                    <h4 class="text-center indigo-text">{{actual.nombre}}</h4>
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                       
-                      <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-ng-repeat="i in [0,1,2]" data-slide-to="{{i}}"></li>
-                      </ol>
-                      <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="{{actual.portada}}" alt="portada" width="460" height="345">
+            <div class="modal gray" id="modalInfo">
+                    <h5 class="text-center indigo-text">{{actual.nombre}}</h5>
+                    <div class="row">
+                      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#myCarousel" data-ng-repeat="i in [0,1,2]" data-slide-to="{{i}}"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                          <div class="item active">
+                              <img class="img-responsive" src="{{actual.portada}}" alt="portada" width="460" height="345">
+                          </div>
+                          <div class="item" ng-repeat="foto in actual.fotos">
+                            <img src="{{foto.ruta}}" alt="carrusel">
+                          </div>
                         </div>
-                        <div class="item" ng-repeat="foto in actual.fotos">
-                          <img src="{{foto.ruta}}" alt="carrusel">
-                        </div>
+
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
                       </div>
 
-                      
-                      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                      </a>
                     </div>
+                    
+                    <div class="row">
+                      <div class="panel">
+                        <div class="panel-body">
+                          <p class="text-center">{{actual.ciudad}}</p>
+                          <p class="text-center">{{actual.direccion}}</p>
+                          <p class="text-center">{{actual.descripcion}}</p>
+                        </div>
+                      </div>  
+                    </div> 
+                    
             </div>
         </div>
 
