--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -13,6 +13,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+        <!-- Google Maps -->
+        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+ 
+        <!-- angular-google-maps -->
+        <script src="js/lib/lodash.underscore.min.js?v=2.4.1"></script>
+        <script src="js/lib/angular-google-maps.min.js?v=1.2.2"></script>
+
         <link rel="stylesheet" href="main.css" type="text/css">
         <link rel="stylesheet" href="styles/estiloPac.css">
         
