--- a/public/views/operario/muestras-mensuales.html
+++ b/public/views/operario/muestras-mensuales.html
@@ -1,4 +1,4 @@
-<h4 class="text-center">Gr&aacute;ficos Estad&iacute;sticos</h4>
+<h4 class="text-center teal-text">Gr&aacute;ficos Estad&iacute;sticos</h4>
 <hr>
 <div class="center">
 	<div class="input-group input-daterange">
