--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h4 class="text-center">Centros M&eacute;dicos</h4>
+    <h4 class="text-center teal-text">Centros M&eacute;dicos</h4>
     <hr>
     <input type="search" name="busqueda" ng-model="busqueda" placeholder="Buscar Centro M&eacute;dico">
         
