--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -1,6 +1,5 @@
-<!--<div class="section no-pad-bot">-->
 <div class="container">
-<h4 class="col s12 text-center">Actualice sus datos</h4><hr>
+<h4 class="col s12 text-center teal-text">Mis Datos</h4><hr>
 
     <div class="row">
         <form id="formularioActualizarPaciente" class="col s12">
@@ -34,4 +33,4 @@
             <button type="button" class="btn col s4 right btn-primary" ng-click="regresar()">Regresar</button>
         </form>
     </div>
-  </div>
+</div>
