--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -6,12 +6,12 @@
       <a href="#"><span class="white-text email">Operario</span></a>
     </div>
   </li>
-  <li><a class="waves-effect" ui-sref="pacientes"><i class="material-icons">input</i>Pacientes</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="pacientes"><i class="material-icons">supervisor_account</i>Pacientes</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="muestras"><i class="material-icons">view_list</i>Muestras M&eacute;dicas</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="muestras"><i class="material-icons">view_list</i>Muestras M&eacute;dicas</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="reportesMensuales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
-  <li><a class="waves-effect" ui-sref="reportesTotales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="reportesMensuales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="reportesTotales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
+  <li><a class="waves-effect teal-text" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
