--- a/views/user/sidePaciente.ejs
+++ b/views/user/sidePaciente.ejs
@@ -6,11 +6,11 @@
       <a href="#"><span class="white-text email">Paciente</span></a>
     </div>
   </li>
-  <li><a class="waves-effect" ui-sref="centros"><i class="material-icons">business</i>Centros</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="centros"><i class="material-icons">business</i>Centros</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="datos"><i class="material-icons">subject</i>Datos</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="datos"><i class="material-icons">subject</i>Datos</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="examenes"><i class="material-icons">view_column</i>Examenes</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="examenes"><i class="material-icons">view_column</i>Exámenes</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
+  <li><a class="waves-effect teal-text" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
