--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -1,4 +1,4 @@
-<h4 class="text-center">Examenes de la muestra {{muestra.cod_barras}}</h4>
+<h4 class="text-center teal-text">Ex&aacute;menes de la muestra: {{muestra.cod_barras}}</h4>
 <hr>
 <ul class="collapsible popout" data-collapsible="accordion">
     <li ng-repeat="examen in examenes">
@@ -14,23 +14,23 @@
           <table class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th>Parametro</th>
-              <th>Unidades</th>
-              <th>Resultado</th>
-              <th>Valores/referencia</th>
-              <th>editar</th>
-              <th>eliminar</th>
+              <th class="text-center">Parámetro</th>
+              <th class="text-center">Unidades</th>
+              <th class="text-center">Resultado</th>
+              <th class="text-center">Valores/Referencia</th>
+              <th class="text-center">Editar</th>
+              <th class="text-center">Eliminar</th>
             </tr>
           </thead>
           <tbody>
               <tr ng-repeat="resultado in examen.resultados | filter:busqueda">
-                  <td > {{ resultado.parametro }} </td>
-                  <td > {{ resultado.unidades }} </td>
-                  <td > {{ resultado.resultado }} </td>
-                  <td > {{ resultado.valores_referencia }} </td>
+                  <td class="text-center"> {{ resultado.parametro }} </td>
+                  <td class="text-center"> {{ resultado.unidades }} </td>
+                  <td class="text-center"> {{ resultado.resultado }} </td>
+                  <td class="text-center"> {{ resultado.valores_referencia }} </td>
 
-                  <td ><button type="button" style="border:none;background:none" class="small material-icons" href="#modal1" ng-click="editarResultado(resultado)">mode_edit</button></td>
-                  <td class= "eliminar"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarResultado(examen, resultado)">delete</button></td>
+                  <td class="text-center"><button type="button" style="border:none;background:none" class="small material-icons" href="#modal1" ng-click="editarResultado(resultado)">mode_edit</button></td>
+                  <td class="text-center eliminar"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarResultado(examen, resultado)">delete</button></td>
               </tr>
           </tbody>
         </table>
