--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h4 class="text-center">Mis Ex&aacute;menes</h4>
+<h4 class="col s12 text-center teal-text">Mis Ex&aacute;menes</h4>
 <hr>
 <ul >
     <li>
@@ -8,10 +8,10 @@
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Examen</th>
-                        <th>Fecha</th>
-                        <th>Estado</th>
-                        <th>Resultados</th>
+                        <th class="text-center">Examen</th>
+                        <th class="text-center">Fecha</th>
+                        <th class="text-center">Estado</th>
+                        <th class="text-center">Resultados</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -27,4 +27,5 @@
     </li>
 </ul>
 </div>
+
 
