--- a/public/views/operario/muestras-mensuales.html
+++ b/public/views/operario/muestras-mensuales.html
@@ -6,5 +6,5 @@
     	<span class="input-group-addon">to</span>
     	<input type="text" class="form-control" value="2012-04-19">
 	</div>
-	<nvd3 options="options" data="data"></nvd3>
+	<nvd3 options="options" data="data2"></nvd3>
 </div>
