--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -28,7 +28,7 @@
                 
             </div>
             <div class="modal gray" id="modalInfo">
-                    <h5 class="text-center indigo-text">{{actual.nombre}}</h5>
+                    <h5 class="text-center teal-text">{{actual.nombre}}</h5>
                     <div class="row">
                       <div id="myCarousel" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
