--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -3,17 +3,17 @@
     <div class="col l6 s12">
       <h5 class="white-text"><b>MEAN</b> Team</h5>
         <ul>
-            <li><a class="white-text">We are a team of college smart students. Somos polit&eacute;nicos pilas.</a></li>
-        <li><a class="white-text">Gracias</a>
-        <li><a class="white-text"><b>Edgar</b><i>Jamil</i><u>Guido</u>Lenin</a>
+            <li><a class="white-text">We are a team of college smart students. Somos polit&eacute;nicos.</a></li>
+        <li><a class="white-text" href="http://www.espol.edu.ec/" target="_blank">ESPOL</a></li>
+        <li><a class="white-text" href="https://github.com/fercarvo" target="_blank">Edgar Carvajal</a></li>
+        <li><a class="white-text" href="https://github.com/wjvelez" target="_blank">Washington Vélez</a></li>
         </ul> 
     </div>
     <div class="col l3 s12 right">
       <h5 class="white-text"><b>Documentaci&oacute;n</b></h5>
       <ul>
-        <li><a class="white-text" href="https://www.lucidchart.com/documents/embeddedchart/f726bb32-0c1a-455d-aaf6-a79f73ac10d8">Modelo </a></li>
-        <li><a class="white-text" href="https://espolec-my.sharepoint.com/personal/lhtenece_espol_edu_ec/_layouts/15/guestaccess.aspx?guestaccesstoken=VW1P1j6NJtsRnQeUppZvqbwr5s%2b6%2fLcL8oiju%2fuO1rA%3d&docid=0cc7b6ce2ad114f82b8df09531c33a44d&rev=1&expiration=2017-01-06T06%3a43%3a04.000Z">Documentaci&oacute;n del Proyecto</a></li>
-        <li><a class="white-text" href="https://github.com/wjvelez/Salud-Primero-V2.0">Repositorio GIT</a></li>
+        <li><a class="white-text" target="_blank" href="https://espolec-my.sharepoint.com/personal/lhtenece_espol_edu_ec/_layouts/15/guestaccess.aspx?guestaccesstoken=VW1P1j6NJtsRnQeUppZvqbwr5s%2b6%2fLcL8oiju%2fuO1rA%3d&docid=0cc7b6ce2ad114f82b8df09531c33a44d&rev=1&expiration=2017-01-06T06%3a43%3a04.000Z">Documentaci&oacute;n del Proyecto</a></li>
+        <li><a class="white-text" target="_blank" href="https://github.com/wjvelez/Salud-Primero-V2.0">Repositorio GIT</a></li>
       </ul>
     </div>
   </div>
