--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 		<% include app/login %>       
         
 	</main>
-	<footer class="page-footer cyan darken-2">
+	<footer class="page-footer teal">
 		<% include app/footer %>
 	</footer>
 	<!--  Scripts-->
