--- a/views/operario.ejs
+++ b/views/operario.ejs
@@ -27,7 +27,7 @@
       </div>
     </main>
 
-    <footer class="page-footer cyan darken-2">
+    <footer class="page-footer teal">
       <% include app/footer %>
     </footer>
 
