--- a/public/views/operario/pacientes.html
+++ b/public/views/operario/pacientes.html
@@ -13,16 +13,16 @@
                     <input type="text" class="form-control" name="apellido" ng-model="nuevo_paciente.apellido" placeholder="Apellido">
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="cedula" ng-model="nuevo_paciente.cedula" placeholder="Cedula">
+                    <input type="text" class="form-control" name="cedula" ng-model="nuevo_paciente.cedula" placeholder="C&eacute;dula">
                   </div>
                   <div class="form-group">
                     <input type="email" class="form-control" name="correo" ng-model="nuevo_paciente.correo" placeholder="Correo">
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="direccion" ng-model="nuevo_paciente.direccion" placeholder="Direccion">
+                    <input type="text" class="form-control" name="direccion" ng-model="nuevo_paciente.direccion" placeholder="Direcci&oacute;n">
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="telefono" ng-model="nuevo_paciente.telefono" placeholder="Telefono">
+                    <input type="text" class="form-control" name="telefono" ng-model="nuevo_paciente.telefono" placeholder="Tel&eacute;fono">
                   </div>
               </div>
               <div class="row modal-footer">
@@ -39,13 +39,13 @@
           <table class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th class="text-center">nombre</th>
-              <th class="text-center">correo</th>
-              <th class="text-center">cedula</th>
-              <th class="text-center">direccion</th>
-              <th class="text-center">telefono</th>
-              <th class="text-center">editar</th>
-              <th class="text-center">eliminar</th>
+              <th class="text-center">Nombre</th>
+              <th class="text-center">Correo</th>
+              <th class="text-center">Cédula</th>
+              <th class="text-center">Dirección</th>
+              <th class="text-center">Teléfono</th>
+              <th class="text-center">Editar</th>
+              <th class="text-center">Eliminar</th>
             </tr>
           </thead>
           <tbody>
@@ -66,8 +66,8 @@
 
 <!-- Modal Structure -->
 
-<div id="modalEditarPaciente" class="modal" style="padding-left:20px;padding-right:20px;padding-top:30px;margin-top:-10px">
-  <h5 class="text-center teal-text">Pacientes</h5>
+<div id="modalEditarPaciente" class="modal" style="padding-left:25px;padding-right:25px;padding-top:30px;margin-top:-10px">
+  <h5 class="text-center teal-text">Datos de Paciente</h5>
   <form >
     <div class="container-fluid center">
         <div class="form-group">
