--- a/views/app/login.ejs
+++ b/views/app/login.ejs
@@ -12,11 +12,11 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">Salud Primero</h1>
+      <h1 class="header center teal-text text">Salud Primero</h1>
       <div class="row center">
         <h5 class="header col s12 light">Bienvenidos</h5>
         <!-- Modal Trigger -->
-        <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalLogin">LogIn</a>
+        <a class="modal-trigger waves-effect waves-light btn teal" href="#modalLogin">LogIn</a>
       </div>
       <br><br>
     </div>
@@ -53,7 +53,7 @@
               </div>
             </div>
             <center>
-              <button type='submit' name='btn_login' class='col s12 btn cyan darken-2 btn-large waves-effect'>Login</button>
+              <button type='submit' name='btn_login' class='col s12 btn teal btn-large waves-effect'>Login</button>
             </center>
       </form>
 
@@ -118,7 +118,7 @@
               <p>Mis Datos</p>
           </div>
           <div class="card-action">
-              <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalPcte">Gu&iacute;a Completa</a>
+              <a class="modal-trigger waves-effect waves-light btn teal" href="#modalPcte">Gu&iacute;a Completa</a>
           </div>
         </div>
     </div>
@@ -136,7 +136,7 @@
               <p>Consultar Gr&aacute;ficos Estad&iacute;sticos</p>
           </div>
         <div class="card-action">
-          <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalOp">Gu&iacute;a Completa</a>
+          <a class="modal-trigger waves-effect waves-light btn teal" href="#modalOp">Gu&iacute;a Completa</a>
         </div>
       </div>
     </div>
@@ -154,7 +154,7 @@
             <p>Visualizar tablas de los resultados</p>
         </div>
         <div class="card-action">
-          <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalLab">Gu&iacute;a Completa</a>
+          <a class="modal-trigger waves-effect waves-light btn teal" href="#modalLab">Gu&iacute;a Completa</a>
         </div>
       </div>
     </div>
