--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -21,7 +21,7 @@
 
     </main>
 
-    <footer class="page-footer cyan darken-2">
+    <footer class="page-footer teal">
         <% include app/footer %>
     </footer>
 
