--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -37,7 +37,7 @@
             </div>
             
         </main>
-        <footer class="page-footer cyan darken-2">
+        <footer class="page-footer teal">
             <% include app/footer %>
         </footer>
         <!--  Scripts-->
