--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -12,7 +12,8 @@
     <div class="col l3 s12 right">
       <h5 class="white-text"><b>Documentaci&oacute;n</b></h5>
       <ul>
-        <li><a class="white-text" target="_blank" href="https://espolec-my.sharepoint.com/personal/lhtenece_espol_edu_ec/_layouts/15/guestaccess.aspx?guestaccesstoken=VW1P1j6NJtsRnQeUppZvqbwr5s%2b6%2fLcL8oiju%2fuO1rA%3d&docid=0cc7b6ce2ad114f82b8df09531c33a44d&rev=1&expiration=2017-01-06T06%3a43%3a04.000Z">Documentaci&oacute;n del Proyecto</a></li>
+        <li><a class="white-text" target="_blank" href="http://nvd3.org/index.html">NVD3</a></li>
+        <li><a class="white-text" target="_blank" href="http://materializecss.com/getting-started.html">Materialize</a></li>
         <li><a class="white-text" target="_blank" href="https://github.com/wjvelez/Salud-Primero-V2.0">Repositorio GIT</a></li>
       </ul>
     </div>
@@ -20,6 +21,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="http://krispo.github.io/angular-nvd3/#/">MEAN Team</a>
+    Made by <a class="brown-text text-lighten-3" href="https://github.com/wjvelez">MEAN Team</a>
   </div>
 </div>
