--- a/public/views/operario/muestras.html
+++ b/public/views/operario/muestras.html
@@ -41,8 +41,8 @@
 
               </div>
               <div class="modal-footer row">
-                <button type="reset" class="btn btn-default col s4 right">Cancelar</button>
-                <button type="submit" class="btn btn-primary col s4 " ng-click="agregarMuestra(nuevo_muestra)">Crear</button>
+                <button type="reset" class="btn btn-default col s4 right" ng-click="cancelarMuestra()">Cancelar</button>
+                <button type="reset" class="btn btn-primary col s4 " ng-click="agregarMuestra(nuevo_muestra)">Crear</button>
               </div>
             </form>
       </div>
