--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,31 +1,53 @@
 <div class="container">
-<h4 class="col s12 text-center teal-text">Mis Ex&aacute;menes</h4>
-<hr>
-<ul >
-    <li>
-        <div style="padding-left:35px;padding-right:35px">
-        <div ><input type="search" name="busqueda" ng-model="busqueda" placeholder="Buscar examen medico"></div>
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th class="text-center">Examen</th>
-                        <th class="text-center">Fecha</th>
-                        <th class="text-center">Estado</th>
-                        <th class="text-center">Resultados</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="examen in examenes | filter:{nombre:busqueda}">
-                        <td > {{ examen.nombre }} </td>
-                        <td > {{examen._muestra.fecha | date:'MM/dd/yyyy'}}</td>
-                        <td > Estado</td>
-                        <td ><button type="button" class="small material-icons">view_list</button></td>
-                    </tr>
-                </tbody>
+    <h4 class="text-center teal-text">Examenes del paciente</h4>
+    <hr>
+
+    <div >
+        <input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados">
+    </div>
+
+    <ul class="collapsible popout" data-collapsible="accordion">
+        <li ng-repeat="examen in examenes | filter:busqueda">
+
+            <div class="collapsible-header">
+                <div class="container row fila">
+                    <div class="col s6">
+                        <i class="material-icons">label</i>Examen medico: {{examen.nombre}}    
+                    </div>
+                    <div class="col s6">
+                        Fecha: {{examen._muestra.fecha | date: 'dd-MM-yyyy'}}
+                    </div>
+                </div>
+            </div>
+
+            <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+
+            <div class="row">
+              <div style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Exportar resultados</a></div>
+            </div>
+            
+              <table class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                  <th class="text-center">Parámetro</th>
+                  <th class="text-center">Unidades</th>
+                  <th class="text-center">Resultado</th>
+                  <th class="text-center">Valores/Referencia</th>
+                </tr>
+              </thead>
+              <tbody>
+                  <tr ng-repeat="resultado in examen.resultados">
+                      <td class="text-center"> {{ resultado.parametro }} </td>
+                      <td class="text-center"> {{ resultado.unidades }} </td>
+                      <td class="text-center"> {{ resultado.resultado }} </td>
+                      <td class="text-center"> {{ resultado.valores_referencia }} </td>
+                  </tr>
+              </tbody>
             </table>
-        </div>
-    </li>
-</ul>
+            </div>
+        </li>
+    </ul>    
 </div>
+
 
 
