cambiandole el estilo al pdf

--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -23,7 +23,7 @@
             <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
 
             <div class="row">
-              <div style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Exportar resultados</a></div>
+              <div ng-click="pdf(examen)" style="padding-top:10px;" class="col"><a class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Exportar resultados</a></div>
             </div>
             
               <table class="table table-striped table-bordered">
