--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -16,7 +16,7 @@
             </div>
             <div class="input-field col s12">
               <i class="material-icons prefix">perm_identity</i>
-              <input id="icon_prefix" type="text" pattern="^[0-9]{10}" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" required />
+              <input id="icon_prefix" type="text" pattern="^[0-9]{10}" name="cedula" title="Ingrese un numero de cedula valido" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" required />
               <label class="active" for="icon_prefix">C&eacute;dula</label>
             </div>
             <div class="input-field col s12">
@@ -26,7 +26,7 @@
             </div>
             <div class="input-field col s12">
               <i class="material-icons prefix">phone</i>
-              <input id="icon_prefix" type="text" pattern="^[0-9]{7,10}" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" required />
+              <input id="icon_prefix" type="text" pattern="^[0-9]{7,10}" title="Ingrese un numero de telefono/celular valido" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" required />
               <label class="active" for="icon_prefix">Telefono/Celular</label>
             </div>
             <button type="submit" class="btn col s4 left btn-primary" >Enviar</button>
